Fix for Chrome with RES, sub button too low

--- a/less/stylesheet.less
+++ b/less/stylesheet.less
@@ -1104,6 +1104,7 @@ body {
       }
     }
     .titlebox {
+      position: relative;
       .redditname {
         padding:0px 0px 10px 43px;
         font-weight:normal;
@@ -1131,9 +1132,10 @@ body {
       }
       .subscribe-button {
         background-color:transparent;
-        margin:-43px 0px 0px 0px;
+        margin:0;
         font-weight:normal;
         position:absolute;
+        top:0;
         display:block;
         padding:0px;
         height:33px;
